--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
         </div>
         <div id="menu">
             <button id="toggle-prescricao">☰ Painel</button>
+            <button id="toggle-navigation">Navegação</button>
         </div>
     </div>
     <div id="main-container">
@@ -896,6 +897,51 @@
         window.addEventListener('resize', updateHeaderImage); // Adiciona listener para resize
         window.addEventListener('load', adjustImageWidth);
         window.addEventListener('load', updateHeaderImage); // Atualiza a imagem ao carregar a página
+
+        // Função de navegação
+        function showPosition(position) {
+            const lat = position.coords.latitude;
+            const lon = position.coords.longitude;
+            const accuracy = position.coords.accuracy;
+
+            const userMarker = L.marker([lat, lon], {
+                icon: L.divIcon({
+                    className: 'navigation-icon',
+                    html: '<div style="background-color: darkgreen; width: 10px; height: 10px; border-radius: 50%;"></div>'
+                })
+            }).addTo(map);
+
+            map.setView([lat, lon], 16);
+
+            alert(`Localização obtida com sucesso!\nLatitude: ${lat}\nLongitude: ${lon}\nPrecisão: ${accuracy} metros.`);
+        }
+
+        function showError(error) {
+            switch(error.code) {
+                case error.PERMISSION_DENIED:
+                    alert("Permissão negada pelo usuário.");
+                    break;
+                case error.POSITION_UNAVAILABLE:
+                    alert("Informação de localização indisponível.");
+                    break;
+                case error.TIMEOUT:
+                    alert("A requisição para obter a localização expirou.");
+                    break;
+                case error.UNKNOWN_ERROR:
+                    alert("Um erro desconhecido ocorreu.");
+                    break;
+            }
+        }
+
+        function getLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(showPosition, showError);
+            } else {
+                alert("Geolocalização não é suportada por este navegador.");
+            }
+        }
+
+        document.getElementById('toggle-navigation').addEventListener('click', getLocation);
     </script>
 </body>
 </html>
