--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                             Área Validada: 0 ha
                         </div>
                         <div class="feature-info" id="total-volume">
-                            Volume Total: 0
+                            Quantidade Total: 0
                         </div>
                     </div>
                 </div>
