--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
 
         .button-group button {
             width: 100px;
-            height: 20px;
+            height: auto;
             font-size: 12px;
+            background-color: #B7F5C4;
         }
 
         #export-section {
