--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             top: 50%;
             transform: translate(-50%, -50%);
             padding: 20px;
-            background-color: white;
+            background-color: #F2F2F2;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             z-index: 10000;
             text-align: center;
