--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
         </div>
         <div id="cabeçalho-direito">
             <img src="imagens/logo_cabecalho.png">
+            <img id="logo-cabecalho" src="imagens/logo_cabecalho.png">
         </div>
     </div>
     <div id="produto-tarefa-menu-container">
@@ -1012,6 +1013,10 @@
 
             document.getElementById('home-button').addEventListener('click', function() {
                 window.location.href = "https://www.agroxeque.com.br/operacao";
+            });
+
+            document.getElementById('logo-cabecalho').addEventListener('click', function() {
+                window.location.href = "https://www.agroxeque.com/operacao";
             });
         }
     </script>
