--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             width: 90px;
             background-color: #444444;
             color: white;
+            border-radius: 5px; /* Adiciona arredondamento */
         }
 
         #base select {
@@ -116,6 +117,7 @@
             height: 30px;
             margin: 3px 0;
             background-color: #8F8F8F;
+            border-radius: 5px; /* Adiciona arredondamento */
         }
 
         #main-container {
@@ -163,6 +165,7 @@
             text-align: center;
             font-size: 15px;
             font-weight: bold;
+            position: relative;
         }
 
         .sidebar-content {
@@ -179,7 +182,7 @@
             width: 100%;
             margin-bottom: 10px;
             padding: 5px;
-            border-radius: 5px;
+            border-radius: 5px; /* Adiciona arredondamento */
             background: white;
             text-align: center;
         }
@@ -197,6 +200,7 @@
 
         .control-section button {
             margin-bottom: 5px;
+            border-radius: 5px; /* Adiciona arredondamento */
         }
 
         .control-section button#validate-button {
@@ -220,6 +224,7 @@
             height: auto;
             font-size: 12px;
             background-color: #B7F5C4;
+            border-radius: 5px; /* Adiciona arredondamento */
         }
 
         #export-section {
@@ -231,6 +236,7 @@
             background-color: #8F8F8F;
             width: auto;
             margin: 5px;
+            border-radius: 5px; /* Adiciona arredondamento */
         }
 
         .legend {
@@ -277,10 +283,7 @@
             font-size: 20px;
             color: black;
             transition: transform 0.3s ease-in-out;
-        }
-
-        .collapsed {
-            transform: rotate(180deg);
+            transform: rotate(180deg); /* Adiciona a rotação inicial */
         }
 
         @media (max-width: 768px) {
@@ -358,6 +361,7 @@
 
         .popup button {
             margin: 10px;
+            border-radius: 5px; /* Adiciona arredondamento */
         }
 
         /* Estilos para cursor pointer em elementos clicáveis */
@@ -393,7 +397,7 @@
                 <option value="vari">VARI</option>
             </select>
             <label for="transparency">Transparência:</label>
-            <input type="range" id="transparency" min="0" max="100" value="0">
+            <input type="range" id="transparency" min="0" max="95" value="0">
         </div>
         <div id="menu">
             <button id="toggle-prescricao">☰ Painel</button>
