--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             justify-content: center;
             gap: 25px;
             width: 100%;
+            background-color: #F2F2F2;
             margin-bottom: 5px;
         }
 
