--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             width: 100px;
             height: auto;
             font-size: 12px;
-            background-color: #F2F2F2;
+            background-color: #E8FFF1;
             border-radius: 5px; /* Adiciona arredondamento */
         }
 
