--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
             padding: 10px;
             overflow-y: auto;
             height: calc(100% - 80px);
+            background: #F2F2F2;
         }
 
         #prescricao {
