--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             margin-bottom: 10px;
             padding: 5px;
             border-radius: 5px; /* Adiciona arredondamento */
-            background: white;
+            background: #F2F2F2;
             text-align: center;
         }
 
@@ -325,6 +325,7 @@
             display: flex;
             justify-content: center;
             gap: 5px;
+            background-color: #F2F2F2;
         }
 
         .information-group {
