--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
         /* Estilos para o popup */
         .popup {
             position: fixed;
+            border-radius: 15px;
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
