--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
         }
 
         .control-section button#validate-button {
-            width: 80px;
+            width: 135px;
+            height: 33px;
             display: block;
             margin: 0 auto;
             background-color: #444444;
@@ -241,7 +242,7 @@
         }
 
         .legend {
-            max-height: 266px;
+            max-height: 222px;
             overflow-y: auto;
             width: 100%;
             margin-top: 10px;
