--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         .control-section button#validate-button {
             width: 135px;
-            height: 33px;
+            height: 27px;
             display: block;
             margin: 0 auto;
             background-color: #444444;
@@ -223,7 +223,7 @@
 
         .button-group button {
             width: 100px;
-            height: auto;
+            height: auto + 10px;
             font-size: 12px;
             background-color: #E8FFF1;
             border-radius: 5px; /* Adiciona arredondamento */
