--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
 
         .button-group button {
             width: 100px;
-            height: auto + 10px;
+            height: autox;
+            min-height: 25px;
             font-size: 12px;
             background-color: #E8FFF1;
             border-radius: 5px; /* Adiciona arredondamento */
@@ -242,7 +243,7 @@
         }
 
         .legend {
-            max-height: 222px;
+            max-height: 226px;
             overflow-y: auto;
             width: 100%;
             margin-top: 10px;
